# json-cleaner

./: README.md  json-cleaner.cabal  stack.yaml
app/: Main.hs
